# quackle

./: .clang-format  .gitignore  .travis.yml  AGENTS.md  CMakeLists.txt  LICENSE  LICENSEHEADER  README.MacOS  README.Windows  README.md  Settings.cmake  alphabetparameters.cpp  alphabetparameters.h  anagrammap.cpp  anagrammap.h  appveyor.yml  autosimmer.c  bag.cpp  bag.h  board.cpp  board.h  boardparameters.cpp  boardparameters.h  bogowinplayer.cpp  bogowinplayer.h  catchall.cpp  catchall.h  clock.cpp  clock.h  computerplayer.cpp  computerplayer.h  computerplayercollection.cpp  computerplayercollection.h  cputopology.cpp  cputopology.h  datamanager.cpp  datamanager.h  endgame.cpp  endgame.h  endgameplayer.cpp  (+59 more)
.github/workflows/: build.yml
bindings/: Makefile  quackle.i  ruby_quackle.i  swig.sh
bindings/go/: quackle.go
bindings/lua/: test_selfplay.lua
bindings/python/: test.py  test1_position.py  test2_selfplay.py
bindings/python2/: test1_position.py  test2_selfplay.py
bindings/python3/: test1_position.py  test2_selfplay.py
bindings/ruby/: quackle_runner.rb  test1_position.rb  test2_selfplay.rb  test_base.rb
clojure/wordmonger/: gridquiz.clj  listeners.clj  macros.clj  menu.clj  styled-text.clj  timer.clj  user-functions.clj  wordmonger.clj
cmdline/: .gitignore  quack.cpp  quack.pro
data/: CMakeLists.txt
data/alphabets/: CMakeLists.txt  english_super.quackle_alphabet  english_wild.quackle_alphabet  english_wordfeud.quackle_alphabet  french.quackle_alphabet  greek.quackle_alphabet  korean.quackle_alphabet  mandarin.quackle_alphabet  mandarin.quackle_alphabet~  norwegian.quackle_alphabet  pinyin.quackle_alphabet  polish.quackle_alphabet  russian.quackle_alphabet  swedish.quackle_alphabet  turkish.quackle_alphabet  tuvan.quackle_alphabet  zhuyin.quackle_alphabet
data/lexica/: CMakeLists.txt  copyrights.txt  csw12.dawg  csw15.dawg  csw19.dawg  csw24.dawg  cswapr07.dawg  greek.dawg  korean.dawg  norwegian.dawg  nswl18.dawg  nswl23.dawg  nwl18.dawg  nwl23.dawg  ods5.dawg  osps.dawg  russian.dawg  sowpods.dawg  turkish.dawg  tuvan.dawg  twl06.dawg  twl98.dawg
data/raw_lexica/: cswfeb07.raw  ods4.raw  ods5.raw  sowpods.raw  turkish.raw  twl98.raw
data/strategy/: CMakeLists.txt
data/themes/: CMakeLists.txt  modern.ini  plain.ini  traditional.ini
emscripten/: Makefile  README.md  api.cpp  api.h  em_interface.pro  emscripten.pro  index.html  js_interface.cpp  non_qt_gcgio.cpp  non_qt_gcgio.h  tester.cpp  tester.pro
encodeleaves/: .gitignore  CMakeLists.txt  encodeleaves.cpp  encodeleaves.pro
gaddagize/: .gitignore  CMakeLists.txt  gaddagize.cpp  gaddagize.pro
makegaddag/: .gitignore  CMakeLists.txt  makegaddag.cpp  makegaddag.pro
makeminidawg/: .gitignore  CMakeLists.txt  README  makeminidawg.cpp  makeminidawg.pro  makeminidawgmain.cpp  minidawgmaker.cpp  minidawgmaker.h
makeprimesetmap/: makeprimesetmap.cpp  makeprimesetmap.pro
makescoregaddag/: makescoregaddag.cpp  makescoregaddag.pro
makeswelexicon/: README  cleanup  list0.md5  list0.rmline  list0.url  list1.md5  list1.rmline  list1.url  list2.md5  list2.url  list3.md5  list3.url  listx.add  makeswedawg  makeswelexicon  rmline.c  swedish.raw.md5
quacker/: .gitignore  CMakeLists.txt  Info.plist  LICENSE  Quackle.plist  TODO  bagdisplay.cpp  bagdisplay.h  boarddisplay.cpp  boarddisplay.h  boardsetup.cpp  boardsetup.h  boardsetupdialog.cpp  boardsetupdialog.h  brb.cpp  brb.h  configdialog.cpp  configdialog.h  configpages.cpp  configpages.h  customqsettings.h  dashboard.cpp  dashboard.h  geometry.cpp  geometry.h  graphicalboard.cpp  graphicalboard.h  graphicalreporter.cpp  graphicalreporter.h  history.cpp  history.h  letterbox.cpp  letterbox.h  letterboxsettings.cpp  letterboxsettings.h  lexicondialog.cpp  lexicondialog.h  lister.cpp  lister.h  main.cpp  (+29 more)
quacker/Images.xcassets/AppIcon.appiconset/: Contents.json
quackleio/: CMakeLists.txt  LICENSE  README  TODO  dawgfactory.cpp  dawgfactory.h  dict.cpp  dict.h  dictfactory.cpp  dictfactory.h  dictimplementation.cpp  dictimplementation.h  flexiblealphabet.cpp  flexiblealphabet.h  froggetopt.cpp  froggetopt.h  gaddagfactory.cpp  gaddagfactory.h  gcgio.cpp  gcgio.h  graphicalreporter.cpp  graphicalreporter.h  logania.h  quackleio.pro  queenie.cpp  queenie.h  streamingreporter.cpp  streamingreporter.h  util.cpp  util.h
quackleio/iotest/: capp.gcg  iotest.cpp  iotest.pro  trademarkedboards.cpp  trademarkedboards.h
superleave_extractor/: Makefile  main.cpp
test/: .gitignore  CMakeLists.txt  analyse_raw_output.py  calculateAverage.py  checkInOSPS.py  filterLeaves.py  findNegativeLeaves.py  partialRacks.py  runner.sh  sortLeaves.py  sortRacks.py  stripRacks.py  test.pro  testharness.cpp  testharness.h  testmain.cpp  trademarkedboards.cpp  trademarkedboards.h
test/positions/: boys1.gcg  boys2.gcg  boys3.gcg  boys4.gcg  boys5.gcg  consonant_heaviness_tendency.gcg  deadwoodendgame.gcg  fivepoint.gcg  logan.gcg  logan_we.gcg  multiplayer-crash.gcg  one_tile_play.gcg  preendgame.gcg  preendgame2.gcg  preendgame4.gcg  short_game_with_bad_moves.gcg
test/regression/: README.md  run_regression.py
test/regression/suites/common/: manifest.json  suite.json
test/regression/suites/common/expected/: htmlreport-logan.out  positions-deadwood.out  positions-fivepoint.out  positions-multi.out  positions-one-tile.out  positions-preendgame.out  report-logan.out
test/regression/suites/csw24-english/: manifest.json  suite.json
test/regression/suites/csw24-english/expected/: anagram-build-retinas.out  anagram-satire.out  leavecalc.out  playability.out  selfplay-seed1.out  selfplay-speedy-vs-speedy.out  staticleaves.out
test/regression/suites/csw24-english/inputs/: calc.leaves  static.racks
test/regression/suites/nwl23-english/: manifest.json  suite.json
test/regression/suites/nwl23-english/expected/: anagram-build-retinas.out  anagram-satire.out  enumerate.out  leavecalc.out  playability.out  selfplay-seed1.out  selfplay-speedy-vs-speedy.out  staticleaves.out
testgaddag/: english.quackle_alphabet  scoring.quackle_alphabet  testgaddag.cpp  testgaddag.pro
(+55 files in other folders)
